# advent-of-code-2021

./: CHANGELOG.md  LICENSE  advent-of-code2021.cabal
day-01/assignment-1/: Main.hs
day-01/assignment-2/: Main.hs
day-02/assignment-1/: Main.hs
day-02/assignment-2/: Main.hs
day-03/assignment-1/: Main.hs
day-03/assignment-2/: Main.hs
day-04/assignment-1/: Main.hs
day-04/assignment-2/: Main.hs
day-05/assignment-1/: Main.hs
day-05/assignment-2/: Main.hs
day-06/assignment-1/: Main.hs
day-06/assignment-2/: Main.hs
day-07/assignment-1/: Main.hs
day-07/assignment-2/: Main.hs
day-08/assignment-1/: Main.hs
day-08/assignment-2/: Main.hs
day-09/assignment-1/: Main.hs
day-09/assignment-2/: Main.hs
day-10/assignment-1/: Main.hs
day-10/assignment-2/: Main.hs
day-11/assignment-1/: Main.hs
day-11/assignment-2/: Main.hs
day-12/assignment-1/: Main.hs
day-12/assignment-2/: Main.hs
day-13/assignment-1/: Main.hs
day-13/assignment-2/: Main.hs
day-14/assignment-1/: Main.hs
day-14/assignment-2/: Main.hs
day-15/assignment-1/: Main.hs
day-15/assignment-2/: Main.hs
day-16/assignment-1/: Main.hs
day-16/assignment-2/: Main.hs
day-17/assignment-1/: Main.hs
day-17/assignment-2/: Main.hs
day-18/assignment-1/: Main.hs
day-18/assignment-2/: Main.hs
day-19/assignment-1/: Main.hs
day-19/assignment-2/: Main.hs
day-20/assignment-1/: Main.hs
day-20/assignment-2/: Main.hs
day-21/assignment-1/: Main.hs
day-21/assignment-2/: Main.hs
day-22/assignment-1/: Main.hs
day-22/assignment-2/: Main.hs
day-23/assignment-1/: Main.hs  backup.txt
day-24/assignment-1/: Main.hs
day-24/assignment-2/: Main.hs
day-25/assignment-1/: Main.hs
lib/: AdventOfCode.hs  Util.hs
lib/Algorithms/: Dijkstra.hs
lib/Control/Monad/: Misc.hs
lib/Data/: CircularList.hs  InfMultiSet.hs  Queue.hs
