name:                advent-of-code2021
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Magnus Stavngaard
maintainer:          magnus@stavngaard.dk
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  build-depends:       base >=4.12 && <4.13,
                       text ==1.2.*
  exposed-modules:     AdventOfCode,
                       Util,
                       Data.CircularList,
                       Data.Queue
  hs-source-dirs:      lib
  ghc-options:         -Wall
  default-language:    Haskell2010

executable day-01-1
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*
  hs-source-dirs:      day-01/assignment-1/
  ghc-options:         -Wall -O2

executable day-01-2
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*
  hs-source-dirs:      day-01/assignment-2/
  ghc-options:         -Wall -O2

executable day-02-1
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*
  hs-source-dirs:      day-02/assignment-1/
  ghc-options:         -Wall -O2

executable day-02-2
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*
  hs-source-dirs:      day-02/assignment-2/
  ghc-options:         -Wall -O2

executable day-03-1
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*,
                       vector ==0.12.*
  hs-source-dirs:      day-03/assignment-1/
  ghc-options:         -Wall -O2

executable day-03-2
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*,
                       vector ==0.12.*
  hs-source-dirs:      day-03/assignment-2/
  ghc-options:         -Wall -O2

executable day-04-1
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*,
                       containers ==0.6.*
  hs-source-dirs:      day-04/assignment-1/
  ghc-options:         -Wall -O2

executable day-04-2
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*,
                       containers ==0.6.*
  hs-source-dirs:      day-04/assignment-2/
  ghc-options:         -Wall -O2

executable day-05-1
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*,
                       containers ==0.6.*
  hs-source-dirs:      day-05/assignment-1/
  ghc-options:         -Wall -O2

executable day-05-2
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*,
                       containers ==0.6.*
  hs-source-dirs:      day-05/assignment-2/
  ghc-options:         -Wall -O2

executable day-06-1
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*,
                       vector ==0.12.*
  hs-source-dirs:      day-06/assignment-1/
  ghc-options:         -Wall -O2

executable day-06-2
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*,
                       vector ==0.12.*
  hs-source-dirs:      day-06/assignment-2/
  ghc-options:         -Wall -O2

executable day-07-1
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*,
                       vector ==0.12.*,
                       vector-algorithms ==0.8.*
  hs-source-dirs:      day-07/assignment-1/
  ghc-options:         -Wall -O2

executable day-07-2
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*,
                       vector ==0.12.*
  hs-source-dirs:      day-07/assignment-2/
  ghc-options:         -Wall -O2

executable day-08-1
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2021,
                       text ==1.2.*,
                       parsec ==3.1.*
  hs-source-dirs:      day-08/assignment-1/
  ghc-options:         -Wall -O2
